<resources>
    <string name="app_name">Ez Top-Up</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="image_of_the_carrier">image of the carrier</string>
    <string name="scaning">Scaning....</string>
    <string name="add">Add Carrier</string>
    <string name="edit">Settings</string>
    <string name="modify">Modify Carrier</string>
    <string name="delete">Delete Carrier</string>
    <string name="title_activity_edit_carrier">Edit Carrier</string>
    <string name="save">Save</string>
    <string name="carrier_name">Carrier Name</string>
    <string name="ussd">USSD Code</string>
    <string name="title_activity_add_carrier">Add Carrier</string>
    <string name="title_activity_modify_carrier">Modify Carrier</string>
    <string name="scan_mode">Scan Mode</string>
    <string name="crop">Crop</string>
    <string name="your_recharge_pin">Your Recharge PIN:</string>
    <string name="network_carrier">Network Carrier:</string>
    <string name="recharge">Recharge</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_digits_in_the_recharge_code">Recharge Card Length</string>
    <string name="help">Help</string>
    <string name="modify_carrier_guide">Modify Carrier Guide</string>
</resources>
