<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dialog_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="15dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/your_recharge_pin"
            android:textColor="#fff"
            android:textSize="24sp"
            android:textStyle="bold"

            />

        <!--<View-->
        <!--android:id="@+id/divider"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2dp"-->
        <!--android:background="#000" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rounded_edit_text"
            android:gravity="center">

            <TextView
                android:id="@+id/rechargeCodeView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text=""
                android:textColor="#000 "
                android:textSize="18sp"
                tools:text="1234 5678 1234" />

            <ImageView
                android:id="@+id/copyContent"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/copy_content"
                tools:background="@drawable/copy_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/network_carrier"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/network_carrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"

                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                tools:text="Dialog" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/recharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/left_button"
                android:text="@string/recharge"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/cancelButtonRecharge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/right_button"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>